# fred

./: fred.cabal
fred/: Main.hs
src/Network/Slack/: Client.hs
src/Network/Slack/RTM/: Events.hs
