name:                fred
version:             0.1.0.0
synopsis:            A Slack bot using the RTM API
-- description:
homepage:            https://github.com/githubuser/fred#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Network.Slack.Client
                     , Network.Slack.RTM.Events
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , lens
                     , network-uri
                     , text
                     , websockets
                     , wreq
                     , wuss

executable fred
  hs-source-dirs:      fred
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , fred
                     , optparse-applicative